--- a/page-dev/css/style.css
+++ b/page-dev/css/style.css
@@ -12,6 +12,17 @@
     border-radius: 3px;
 }
 
+.reading {
+    background: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur( 15.0px );
+        -webkit-backdrop-filter: blur( 15.0px );
+    color: #212121;
+    cursor: pointer;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    border-radius: 5px;
+}
+
 .filter-choices:hover {
     background: rgba( 238, 238, 238, 0.49 );
     backdrop-filter: blur( 8.0px );
@@ -106,7 +117,19 @@
 #videoBG {
     position:fixed;
     z-index: -1;
-    opacity: 0.1;
+    opacity: 0.2;
+    height: 100vh;
+    width: 100vw;
+    object-fit: fill;
+}
+
+#videoBG-ink {
+    position:fixed;
+    z-index: -1;
+    opacity: 1.0;
+    height: 100vh;
+    width: 100vw;
+    object-fit: fill;
 }
 
 #editor {
