--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,53 +1,31 @@
-<div class="animate__animated animate__fadeIn">
-    <video id="videoBG" poster="poster.JPG" autoplay muted loop>
-        <source src="video/dissolve.mp4" type="video/mp4">
+<div class="animate__animated animate__fadeIn" id="vid-contain">
+    <video id="videoBG" poster="img/dissolve_poster.jpg" autoplay muted loop>
+        <source src="video/dissolve/dissolve.webm" type="video/webm">
+        <source rc="video/dissolve.mp4" type="video/mp4">
     </video>
 </div>
 
-<main class="container animate__animated animate__fadeIn">
+<main class="container animate__animated animate__fadeIn" id="main">
     <div class="row m-5-top">
         <div class="col s3 border-grey corner-med charter grey-text text-lighten-2 p-1">
             <!-- Grey navigation panel -->
             <h3 class="roboto three zero">Featured:</h3>
-            <ul>
-                <li class="filter-choices">Wowwe What a great article</li>
-                <li class="filter-choices">Skittles and buildings</li>
-                <li class="filter-choices">Strange ambients songs</li>
+            <ul id="featured-list">
+                {{> preloader }}
             </ul>
             <h3 class="roboto three zero m-5-top">Topics:</h3>
-            <ul>
-                <li class="filter-choices">Coding</li>
-                <li class="filter-choices">Mac & Cheese</li>
-                <li class="filter-choices">Trumpets</li>
+            <ul id="topic-list">
+                {{> preloader }}
             </ul>
         </div>
 
         <div class="col s9">
             <!-- Teal page content  -->
-            <ul class="zero">
-                <li class="articles border-grey p-1 grey-text text-lighten-3 corner-med first-article">
-                    <h3 class="zero roboto three article-text">Article Title</h3>
-                    <h4 class="charter article-text">You'll never believe this!</h4>
-                </li>
-            </ul>
-            <ul>
-                <li class="articles border-grey p-1 grey-text text-lighten-3 corner-med m-1">
-                    <h3 class="zero roboto three article-text">Article Title</h3>
-                    <h4 class="charter article-text">You'll never believe this!</h4>
-                </li>
-            </ul>
-            <ul>
-                <li class="articles border-grey p-1 grey-text text-lighten-3 corner-med m-1">
-                    <h3 class="zero roboto three article-text">Article Title</h3>
-                    <h4 class="charter article-text">You'll never believe this!</h4>
-                </li>
-            </ul>
-            <ul>
-                <li class="articles border-grey p-1 grey-text text-lighten-3 corner-med m-1">
-                    <h3 class="zero roboto three article-text">Article Title</h3>
-                    <h4 class="charter article-text">You'll never believe this!</h4>
-                </li>
+            <ul class="zero" id="article-list">
+                {{> preloader }}
             </ul>
         </div>
     </div>
 </main>
+
+<script src="javscript/home.js"></script>
