--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,10 +94,13 @@
     margin-top: 2.5rem;
 }
 
+.m-5-bottom {
+    margin-bottom: 5rem;
+}
+
 .m-25-bottom {
     margin-bottom: 2.5rem;
 }
-
 .m-5-top {
     margin-top: 5rem;
 }
