--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,55 +2,18 @@
 <html>
 
 <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Roboto Slab Google Font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet">
-    <!--Import Black Chancery Font-->
-    <link href="http://fonts.cdnfonts.com/css/black-chancery" rel="stylesheet">
-    <!--Import Charter Font-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charter-webfont@4/charter.min.css" />
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Blog</title>
+    {{> links}}
 </head>
 
 <body class="grey darken-4">
-    <header>
-        <nav class="grey lighten-2">
-            <div class="nav-wrapper container">
-                <a href="#!" class="brand-logo chance grey-text text-darken-4">Ye' Olde Tech Blog</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down roboto four">
-                    <li><a class="grey-text text-darken-4" href="sass.html">Home</a></li>
-                    <li><a class="grey-text text-darken-4" href="badges.html">Dashboard</a></li>
-                    <li><a class="grey-text text-darken-4" href="collapsible.html">Login</a></li>
-                    <li class="hide"><a href="mobile.html">Logout</a></li>
-                </ul>
-            </div>
-        </nav>
-
-        <ul class="sidenav roboto four" id="mobile-demo">
-            <li><a href="sass.html">Home</a></li>
-            <li><a href="badges.html">Dashboard</a></li>
-            <li><a href="collapsible.html">Login</a></li>
-            <li class="hide"><a href="mobile.html">Logout</a></li>
-        </ul>
-    </header>
+    {{#if session.loggedIn}}
+    {{> navBarLog}}
+    {{else}}
+    {{> navBar}}
+    {{/if}}
     {{{body}}}
 
-    <!--jQuery-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- Compiled and minified JavaScript -->
