--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,28 +1,29 @@
-<div class="animate__animated animate__fadeIn">
+<div class="animate__animated animate__fadeIn" id="vid-contain">
     <video id="videoBG" autoplay muted loop>
         <source src="video/lines.mp4" type="video/mp4">
     </video>
 </div>
 <main class="container animate__animated animate__fadeIn m-5-top">
-    <div class="row border-grey corner-med p-1">
-        <form class="col s12">
+    <div class="row border-grey corner-med p-1" id="login-form">
+        <form class="col s12" method="POST" action="/api/v1/users/auth">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="email" type="email" class="validate grey-text">
+                    <input id="email" type="email" class="validate grey-text" name="email">
                     <label for="email">Email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="password" type="password" class="validate grey-text">
+                    <input id="password" type="password" name="password" class="validate grey-text">
                     <label for="password">Password</label>
                 </div>
             </div>
             <button
                 class="btn-large waves-effect waves-light m-1-top corner-med transparent border-grey grey-text text-lighten-3 roboto 400"
-                type="submit" name="action">Login
+                id="loginbtn" type="submit" vale="Submit">Login
                 <i class="material-icons right">arrow_forward</i>
             </button>
         </form>
     </div>
 </main>
+<script src="javscript/login.js"></script>
