--- a/views/partials/navBarLog.handlebars
+++ b/views/partials/navBarLog.handlebars
@@ -6,7 +6,7 @@
             <ul class="right hide-on-med-and-down roboto four">
                 <li><a class="grey-text text-darken-4" href="/">Home</a></li>
                 <li><a class="grey-text text-darken-4" href="/dashboard">Dashboard</a></li>
-                <li><a class="grey-text text-darken-4" href="/logout">Logout</a></li>
+                <li><a class="grey-text text-darken-4" href="/api/v1/users/auth/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
