--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<video id="videoBG" autoplay muted loop>
+<video id="videoBG" poster="img/mesh_poster.jpg" autoplay muted loop>
     <source src="video/mesh.mp4" type="video/mp4">
     <source src="video/mesh/mesh.webm" type="video/webm">
 </video>
