--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -1,5 +1,5 @@
 <div class="animate__animated animate__fadeIn">
-    <video id="videoBG" class="" autoplay muted loop>
+    <video id="videoBG" poster="img/ink_poster.jpg" class="" autoplay muted loop>
         <source src="video/ink.mp4" type="video/mp4">
         <source src="video/ink/ink.webm" type="video/webm">
     </video>
