--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <div class="animate__animated animate__fadeIn">
-    <video id="videoBG" autoplay muted loop>
+    <video id="videoBG" poster="img/particles_poster.jpg" autoplay muted loop>
         <source src="video/particles.mp4" type="video/mp4">
         <source src="video/particles/particles.webm" type="video/webm">
     </video>
