--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,7 @@
 <div class="animate__animated animate__fadeIn" id="vid-contain">
-    <video id="videoBG" autoplay muted loop>
+    <video id="videoBG" poster="img/lines_poster.jpg" autoplay muted loop>
         <source src="video/lines.mp4" type="video/mp4">
+        <source src="video/lines/lines.webm" type="video/webm">
     </video>
 </div>
 <main class="container animate__animated animate__fadeIn m-5-top">
