--- a/views/read.handlebars
+++ b/views/read.handlebars
@@ -1,4 +1,4 @@
-<video id="videoBG-ink" class="animate__animated animate__fadeIn" autoplay muted loop>
+<video id="videoBG-ink" poster="img/ink_poster.jpg" class="animate__animated animate__fadeIn" autoplay muted loop>
     <source src="video/ink.mp4" type="video/mp4">
     <source src="video/ink/ink.webm" type="video/webm">
 </video>
