--- a/views/partials/links.handlebars
+++ b/views/partials/links.handlebars
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet">
 <!--Import Black Chancery Font-->
-<link href="http://fonts.cdnfonts.com/css/black-chancery" rel="stylesheet">
+<link href="https://fonts.cdnfonts.com/css/black-chancery" rel="stylesheet">
 <!--Import Charter Font-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charter-webfont@4/charter.min.css" />
 <!-- Compiled and minified CSS -->
