--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,7 +3,7 @@
     <source src="video/mesh/mesh.webm" type="video/webm">
 </video>
 <main class="container animate__animated animate__fadeIn m-5-top">
-    <div class="row border-grey corner-med p-1">
+    <div class="row border-grey corner-med p-1" id="loginform">
         <form class="col s12" method="POST" action="/api/v1/users/auth/signup">
             <div class="row">
                 <div class="input-field col s6">
@@ -35,3 +35,4 @@
         </form>
     </div>
 </main>
+<script src="javscript/signup.js"></script>
