--- a/views/fourOhFour.handlebars
+++ b/views/fourOhFour.handlebars
@@ -6,6 +6,7 @@
 </div>
 <main class="container animate__animated animate__fadeIn m-5-top reading m-5-bottom">
     <div class="container flow-text">
-        <h1 class="zero roboto" id="title">Article posted successfully</h1>
+        <h1 class="zero roboto grey-text text-lighten-3" id="title">Four - Zero - Four</h1>
+        <p class="zero roboto grey-text text-lighten-3" id="title">There's nothing here</p>
     </div>
 </main>
