--- a/views/partials/navBar.handlebars
+++ b/views/partials/navBar.handlebars
@@ -4,9 +4,9 @@
             <a href="/" class="brand-logo chance grey-text text-darken-4">Ye' Olde Tech Blog</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down roboto four">
-                <li><a class="grey-text text-darken-4" href="/">Home</a></li>
-                <li><a class="grey-text text-darken-4" href="/signup">Sign Up</a></li>
-                <li><a class="grey-text text-darken-4" href="/login">Login</a></li>
+                <li id="nav-home"><a class="grey-text text-darken-4" href="/">Home</a></li>
+                <li id="nav-signup"><a class="grey-text text-darken-4" href="/signup">Sign Up</a></li>
+                <li id="nav-login"><a class="grey-text text-darken-4" href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
