--- a/views/partials/navBarLog.handlebars
+++ b/views/partials/navBarLog.handlebars
@@ -4,8 +4,8 @@
             <a href="/" class="brand-logo chance grey-text text-darken-4">Ye' Olde Tech Blog</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down roboto four">
-                <li><a class="grey-text text-darken-4" href="/">Home</a></li>
-                <li><a class="grey-text text-darken-4" href="/dashboard">Dashboard</a></li>
+                <li id="nav-home"><a class="grey-text text-darken-4" href="/">Home</a></li>
+                <li id="nav-dash"><a class="grey-text text-darken-4" href="/dashboard">Dashboard</a></li>
                 <li><a class="grey-text text-darken-4" href="/api/v1/users/auth/logout">Logout</a></li>
             </ul>
         </div>
